testsuite/tests/parser/should_fail/readFail034.stderr

readFail034.hs:4:6: error: [GHC-58481]
    Parse error on input ‘=’.
    Expected one of '_', 'as', 'case', 'hiding', 'if', 'let',
                    'qualified', 'export', 'label', 'dynamic', ...
